# ccmix

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build_vs2022_msvc.bat  ccmix.sln  ccmix.vcxproj  ccmix.vcxproj.filters  test_vs2022_msvc.bat
cmake/modules/: FindCrypto++.cmake
src/: Main.cpp  SimpleOpt.h  SimpleOpt.hpp  ccmix.cpp  gmdedit.cpp  mix_db_gamedb.cpp  mix_db_gamedb.h  mix_db_gamedb.hpp  mix_db_gmd.cpp  mix_db_gmd.h  mix_db_gmd.hpp  mix_db_lmd.cpp  mix_db_lmd.h  mix_db_lmd.hpp  mix_dexoder.cpp  mix_dexoder.h  mix_file.cpp  mix_file.h  mix_file.hpp  mix_game_db.cpp  mix_gmd.hpp  mix_header.cpp  mix_header.h  mix_header.hpp  mix_numeric.hpp  mixid.cpp  mixid.h  mixid.hpp  mixkey.cpp
src/gmdedit/: gmdedit.cpp
src/mixkey/: mix_dexoder.cpp  mix_dexoder.h  mix_dexoder.hpp  mixkey.cpp
src/win32/: dirent.h  stdint.hpp
src/wwmix/: Application.cpp  Application.hpp  ArchiveCli.cpp  ArchiveCli.hpp  MixFile.cpp  MixFile.hpp  MixGameDb.cpp  MixGameDb.hpp  MixGmd.cpp  MixGmd.hpp  MixHeader.cpp  MixHeader.hpp  MixLmd.cpp  MixLmd.hpp  MixNumeric.hpp  Utf8Path.cpp  Utf8Path.hpp  archive_cli.cpp  main.cpp  mix_db_gmd.hpp  mix_db_lmd.cpp  mix_file.cpp  mix_file.hpp  mix_game_db.hpp  mix_gmd.cpp  mix_header.cpp  mix_lmd.cpp  mix_lmd.hpp  mixid.cpp  mixid.hpp  wwmix.cpp
tests/: README.md  Run-WwMixTests.ps1  Test-WwMix.Functional.ps1  Test-WwMix.ReadOnly.ps1  WwMix.TestHelpers.ps1
